	* fixed bug where local peer discovery and DHT wouldn't be announced to without trackers
	* fixed bug in bdecoder when decoding invalid messages
	* added build warning when building with UNICODE but the standard library
	  doesn't provide std::wstring
	* fixed add_node python binding
	* fixed issue where trackers wouldn't tried immediately when the previous one failed
	* fixed synchronization issue between download queue and piece picker
	* fixed bug in udp tracker scrape response parsing
	* fixed bug in the disk thread that could get triggered under heavy load
	* fixed bug in add_piece() that would trigger asserts
	* fixed vs 2010 build
	* recognizes more clients in identify_client()
	* fixed bug where trackers wouldn't be retried if they failed
	* slight performance fix in disk elevator algorithm
	* fixed potential issue where a piece could be checked twice
	* fixed build issue on windows related to GetCompressedSize()
	* fixed deadlock when starting torrents with certain invalid tracker URLs
	* fixed iterator bug in disk I/O thread
	* fixed FIEMAP support on linux
	* fixed strict aliasing warning on gcc
	* fixed inconsistency when creating torrents with symlinks
	* properly detect windows version to initialize half-open connection limit
	* fixed bug in url encoder where $ would not be encoded

0.15 release

	* introduced a session state save mechanism. load_state() and save_state().
	  this saves all session settings and state (except torrents)
	* deprecated dht_state functions and merged it with the session state
	* added support for multiple trackers in magnet links
	* added support for explicitly flushing the disk cache
	* added torrent priority to affect bandwidth allocation for its peers
	* reduced the number of floating point operations (to better support
	  systems without FPU)
	* added new alert when individual files complete
	* added support for storing symbolic links in .torrent files