@@ -1,3 +1,4 @@
+	* removed the reuse-address flag on the listen socket
 	* fixed bug where local peer discovery and DHT wouldn't be announced to without trackers
 	* fixed bug in bdecoder when decoding invalid messages
 	* added build warning when building with UNICODE but the standard library
